--- a/index.html
+++ b/index.html
@@ -16,8 +16,55 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					Bachelorproef Toegepaste informatica
+					<br>Kevin Vandeputte
+				</section>
+				<section>
+					<h2>Agenda</h2>
+					<ol>
+						<li>Voorstelling</li>
+						<li>Persoonlijke doelstellingen</li>
+						<li>Wat heb ik geleerd</li>
+						<li>Stage</li>
+						<li>Conclusie</li>
+					</ol>
+				</section>
+				<section>
+					<h2>Wie ben ik?</h2>
+					2 minuten
+				</section>
+				<section>
+					<h2>Wat geleerd tijdens de afgelopen 4 jaar</h2>
+					7 minuten
+				</section>
+				<section>
+					<h2>Stage</h2>
+					7 minuten
+				</section>
+				<section>
+					<h2>Stagebedrijf</h2>
+					7 minuten
+				</section>
+				<section data-markdown>
+					<textarea data-template>
+						> "Maak een digital twin op stadsniveau in het Azure Digital Twins platform en maak hierbij gebruik van de OGC-standaard voor 3D-stadsmodellen"
+					</textarea>
+				</section>
+				<section>
+					<h2>Waarom?</h2>
+				</section>
+				<section>
+					Resultaat of dieper ingaan op tot instandkoming?
+				</section>
+				<section>
+					<h2>Afronden</h2>
+					verhaal laten samenkomen <br>
+					1 minuut
+				</section>
+				<section>
+					<h2>Vragen?</h2>
+				</section>
 			</div>
 		</div>
 
