--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/custom.css">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
@@ -16,11 +16,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					Bachelorproef Toegepaste informatica
-					<br>Kevin Vandeputte
+				<section data-background-image="../dist/img/personal2_blur.png" data-transition="fade">
+					<h3 class="no-blur">Bachelorproef Toegepaste Informatica</h3>
+					<p>Kevin Vandeputte</p>
 				</section>
-				<section>
+				<section data-visibility="hidden">
 					<h2>Agenda</h2>
 					<ol>
 						<li>Voorstelling</li>
@@ -30,9 +30,37 @@
 						<li>Conclusie</li>
 					</ol>
 				</section>
-				<section>
-					<h2>Wie ben ik?</h2>
-					2 minuten
+				<section data-background-image="../dist/img/personal2.png">
+					<h2></h2>
+				</section>
+				<section data-auto-animate data-visibility="hidden">
+					<h3>Persoonlijke doelstellingen</h3>
+				</section>
+				<section data-auto-animate data-visibility="hidden">
+					<h3>Persoonlijke doelstellingen</h3>
+					<ul>
+						<li>Job verdiepen</li>
+					</ul>
+				</section>
+				<section data-auto-animate data-visibility="hidden">
+					<h3>Persoonlijke doelstellingen</h3>
+					<ul>
+						<li>Job verdiepen</li>
+						<li>Diploma halen</li>
+					</ul>
+				</section>
+				<section data-background-image="../dist/img/hwp_Dijlemonding.jpg" data-visibility="hidden">
+				</section>
+				<section data-background-image="../dist/img/Projectflow.png" data-visibility="hidden">
+				</section>
+				<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)" data-visibility="hidden">
+					<div class="">
+						<div data-id="box1" style="background: rgba(255,255,34,1); width: 50px; height: 50px; border-radius: 200px;"></div>
+						<div data-id="box" style="height: 100px; width: 500px; border:solid 5px rgba(31,73,134,1); border-color:rgba(31,73,134,1) transparent transparent transparent; border-radius: 50%/100px 100px 0 0; transform: rotate(45deg);"></div>
+						<div data-id="box2" style="background: rgba(42,255,42,1); width: 50px; height: 50px; border-radius: 200px;"></div>
+						<div data-id="box3" style="background: rgba(128,35,125,1); width: 50px; height: 50px; border-radius: 200px;"></div>
+						<div data-id="box3" style="background: rgba(35,191,255,1); width: 50px; height: 50px; border-radius: 200px;"></div>
+					</div>
 				</section>
 				<section>
 					<h2>Wat geleerd tijdens de afgelopen 4 jaar</h2>
@@ -43,19 +71,73 @@
 					7 minuten
 				</section>
 				<section>
-					<h2>Stagebedrijf</h2>
-					7 minuten
+					<h3>Stagebedrijf</h3>
 				</section>
 				<section data-markdown>
 					<textarea data-template>
 						> "Maak een digital twin op stadsniveau in het Azure Digital Twins platform en maak hierbij gebruik van de OGC-standaard voor 3D-stadsmodellen"
 					</textarea>
 				</section>
-				<section>
-					<h2>Waarom?</h2>
+				<section data-auto-animate>
+					<h3>Waarom?</h3>
 				</section>
 				<section>
-					Resultaat of dieper ingaan op tot instandkoming?
+					<section>
+						<h3>Resultaat of dieper ingaan op tot instandkoming?</h3>
+						<p>Wilde eventueel 'kort' ingaan op mijn drie hoofdfases van de realisatie</p>
+					</section>
+					<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+						<h3>Digital Twin service</h3>
+						<h4>Twin Graph</h4>
+					</section>
+					<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+						<h3>Digital Twin service</h3>
+						<h4>Twin Graph</h4>
+						<div class="r-stack">
+							<div data-id="box1" style="background: rgba(224,136,0, 1); width: 300px; height: 300px; border-radius: 50px;">Stad</div>
+						</div>
+					</section>
+					<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+						<h3>Digital Twin service</h3>
+						<h4>Twin Graph</h4>
+						<div class="r-stack">
+							<div data-id="box1" style="background: rgba(224,136,0, 1); width: 300px; height: 300px; border-radius: 50px;">Stad</div>
+							<div data-id="box2" style="background: rgba(164,145,0, 1); width: 200px; height: 200px; border-radius: 50px;">District</div>
+						</div>
+					</section>
+					<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
+						<h3>Digital Twin service</h3>
+						<h4>Twin Graph</h4>
+						<div class="r-stack">
+							<div data-id="box1" style="background: rgba(224,136,0, 1); width: 300px; height: 300px; border-radius: 50px;">Stad</div>
+							<div data-id="box2" style="background: rgba(164,145,0, 1); width: 200px; height: 200px; border-radius: 50px;">District</div>
+							<div data-id="box3" style="background: rgba(248,131,176, 1); width: 100px; height: 100px; border-radius: 50px; color:black; font-size: large;">Wijk</div>
+						</div>
+					</section>
+					<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)" data-transition="zoom">
+						<h3>Digital Twin service</h3>
+						<h4>Twin Graph</h4>
+						<div class="r-hstack justify-center">
+							<div data-id="box1" style="background: rgba(224,136,0, 1); width: 100px; height: 100px; border-radius: 200px; margin: 10px; border: solid 5px white"></div>
+							<div data-id="box2" style="background: rgba(164,145,0, 1);; width: 100px; height: 100px; border-radius: 200px; margin: 10px; border: solid 5px white"></div>
+							<div data-id="box3" style="background: rgba(248,131,176, 1); width: 100px; height: 100px; border-radius: 200px; margin: 10px; border: solid 5px white"></div>
+						</div>
+					</section>
+					<section data-background-image="../dist/img/twingraph.png">
+					</section>
+					<section data-auto-animate data-transition="convex" data-transition-speed="slow">
+						<h3>Azure Services</h3>
+					</section>
+					<section data-auto-animate data-background-image="../dist/img/architecture.jpg">
+						<h3></h3>					
+					</section>
+				</section>
+				
+				<section>
+					<h3>Visualisatie</h3>
+				</section>
+				<section>
+					<video data-autoplay src="../dist/video/Visualisatie_Presentatie.mp4"></video>
 				</section>
 				<section>
 					<h2>Afronden</h2>
@@ -78,6 +160,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
+				controls: false,
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
