--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 					7 minuten
 				</section>
 				<section>
-					<h3>Stagebedrijf</h3>
+					<h3>Geo Solutions</h3>
+					<p>Location Intelligence</p>
 				</section>
 				<section data-markdown>
 					<textarea data-template>
@@ -80,11 +81,17 @@
 				</section>
 				<section data-auto-animate>
 					<h3>Waarom?</h3>
+					<ul>
+						<li class="fragment">Toenemende vraag naar urban digital twins</li>
+						<li class="fragment">Integreren van GIS-standaarden</li>
+						<li class="fragment">Verkennen van het Azure Digital Twins platform</li>
+					</ul>
 				</section>
 				<section>
 					<section>
-						<h3>Resultaat of dieper ingaan op tot instandkoming?</h3>
-						<p>Wilde eventueel 'kort' ingaan op mijn drie hoofdfases van de realisatie</p>
+						<h3>Realisatie</h3>
+						<p>Resultaat of dieper ingaan op tot instandkoming?</p>
+						<!-- <p>Wilde eventueel 'kort' ingaan op mijn drie hoofdfases van de realisatie</p> -->
 					</section>
 					<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
 						<h3>Digital Twin service</h3>
@@ -160,7 +167,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
-				controls: false,
+				controls: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
