--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<section data-background-image="../dist/img/personal_color.JPG">
 					<div style="position: absolute; top: -200px; width: 40%; right: 0; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
 						<h3>Kevin Vandeputte</h3>
-						<ul style="font-size: 18px; list-style-type: square; line-height: 1.5;">
+						<ul style="font-size: 18px; list-style-type: none; line-height: 1.5;">
 							<li style="font-size: 18px; font-weight: 100;">40 jaar</li>
 							<li style="font-size: 18px; font-weight: 100; ">Data engineer</li>
 							<li style="font-size: 18px; font-weight: 100; ">15-jaar ervaring in de watersector</li>
@@ -232,8 +232,7 @@
 						<h3>Stap 2</h3>
 						<h4>Azure Services</h4>
 					</section>
-					<section data-auto-animate data-background-image="../dist/img/architecture.jpg">
-						<h3></h3>					
+					<section data-auto-animate data-background-image="../dist/img/architecture.png">				
 					</section>
 				</section>
 				<section data-auto-animate>
