overgang en finaliseren

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 				<h3 class="no-blur" style="text-shadow: 3px 3px 2px rgba(51, 51, 51, 0.5);">Bachelorproef<br>Toegepaste
 					Informatica</h3>
 				<p style="text-shadow: 3px 3px 2px rgba(51, 51, 51, 0.5);">Kevin Vandeputte</p>
+				<aside class="notes">
+					Welkom bij mijn bachelorproef.
+					Met deze presentatie wil ik jullie een inkijk geven in het traject dat ik de afgelopen 4 jaar
+					heb afgelegd als werktraject student.
+				</aside>
 			</section>
 			<section data-background-image="../dist/img/personal_color.JPG">
 				<div
@@ -38,21 +43,14 @@
 					</ul>
 				</div>
 				<aside class="notes">
-					40 jaar - data engineer.
-					Geboren aan de boorden van de maas.
-					Water al van jongs af al present, want als Maas hoog stond dan gingen we altijd aan de dijken
-					kijken.
-					Dus toch straf dat ik uiteindelijk 15 jaar lang in de watersector heb gewerkt.
-
-					Overgang: ???
+					Overgang: een van de klanten die wij adviseerde was de stad mechelen 
 				</aside>
 			</section>
 			<section data-background-image="../dist/img/HWP.jpg">
 				<h4 style="text-shadow: 3px 3px 2px rgba(51, 51, 51, 0.5);">Hemelwaterplan Mechelen</h4>
 				<aside class="notes">
-					Een van de projecten van HWP
-					data-driven plan.
-					projectleider: inhoudelijk en financieel verantwoordelijk voor dat plan
+					Wat is hemelwaterplan, wat was mijn rol. 
+					Overgang: De stad wou een data gebaseerd plan dus al vanaf CONCEPTfase werd hier rekening mee gehouden en zo ONTWIKKELDE ik...
 				</aside>
 			</section>
 			<section>
@@ -62,17 +60,16 @@
 					<img class="fragment" src="../dist/img/workshop.png" width="500">
 				</div>
 				<aside class="notes">
-					1. Via FME en python een data-gebaseerd plan dit resulteerde in kansenkaarten die we dan in
-					workshops gebruikte om lokale terreinkennis aan toe te vogen.
+					overgang 1: Die tool resulteerde in potentieelkaarten.
+					overgang 2: Deze werden dan in workshops gebruikt om de kennis te verrijken met lokale expertise.
+					overgang slide: Als ik kijk naar hoe ik toen mijn projecten aanpakte volgde die een bepaalde flow.
 				</aside>
 			</section>
 			<section data-background-image="../dist/img/Projectflow.png">
 				<aside class="notes">
-					Via dit project groeide ook mijn geloof in hydro-informatica want ook bezig met automatisaties en
-					optimalisaties werkprocessen.
-					Maar voelde dat ik bepaalde skills misten op ontwikkelvlak dus ik besloot mij hier in te verdiepen.
-
-					Overgang: ???
+					Sterker worden in ontwikkeling. automatisaties naast projectwerk
+					Overgang: 
+					besloot te starten met de bachelor en stelde mezelf enkele doelen.
 				</aside>
 			</section>
 			<section>
@@ -80,15 +77,15 @@
 				<ul>
 					<li class="fragment fade-up" style="list-style: none;line-height: 1,5;"><span
 							style="color: #1f4986;"><i class="fa-solid fa-graduation-cap"
-								style="margin-right: 15px;"></i></span></i>Diploma halen</li>
+								style="margin-right: 15px;"></i></span></i>Diploma behalen</li>
 					<li class="fragment fade-up" style="list-style: none; line-height: 1.5;"><span
 							style="color: #1f4986;"><i class="fa-solid fa-code"
-								style="margin-right: 15px;"></i></span>Leren programmeren</li>
+								style="margin-right: 15px;"></i></span>Technische skills ontwikkelen</li>
 				</ul>
 				<aside class="notes">
-					Nooit de kans voor diploma.
-
-					Overgang: ???
+					Overgang:
+					Veel dingen geleerd en naarmate de jaren vorderde werden de projecten uitdagender en een van de projecten dat mij het meest 
+					heeft uigedaagd, ook op persoonlijk vlak  
 				</aside>
 			</section>
 			<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
@@ -106,7 +103,8 @@
 					</div>
 				</div>
 				<aside class="notes">
-
+					Overgang:
+					Dit was een...
 				</aside>
 			</section>
 			<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
@@ -117,17 +115,16 @@
 							AR-applicatie met Spring boot backend</li>
 						<li style="font-size: 24px; font-weight: 100 !important; margin: 15px 0px;">Uitdaging:
 							geolocatie</li>
-						<li style="font-size: 24px; font-weight: 100 !important; margin: 15px 0px;">Doorzettingsvermogen
-							en vertrouwen in probleemoplossend vermogen</li>
+						<li class="fragment" style="font-size: 24px; font-weight: 100 !important; margin: 15px 0px;">Doorzettingsvermogen</li>
+							<li class="fragment" style="font-size: 24px; font-weight: 100 !important; margin: 15px 0px;">Vertrouwen in probleemoplossend vermogen</li>
 					</ul>
 				</div>
 				<aside class="notes">
-					overgang = gaf zelfvertrouwen om in volgend project te kiezen voor een technologie
-					waarin zelfs niemand binnen de hogeschool ons kon ondersteunen.
+					overgang = gaf me het zelfvertrouwen in mijn ontwikkel skills en probleemoplossend vermogen.
+					Dit kwam goed van pas tijdens mijn stageproject.
 				</aside>
 			</section>
-			<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)"
-				data-visibility="hidden">
+			<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)" data-visibility="hidden">
 				<h4 style="margin: 0px">Project 4.0: Exploratietool</h4>
 				<img data-id="utopia_img" src="../dist/img/utopia.png" class="r-stretch" style="margin-bottom: 0px">
 				<div class="r-hstack justify-center">
@@ -142,20 +139,17 @@
 					</div>
 				</div>
 			</section>
-			<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)"
-				data-visibility="hidden">
+			<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)" data-visibility="hidden">
 				<div class="r-hstack">
 					<img data-id="utopia_img" src="../dist/img/utopia.png" width="500">
 					<ul style="line-height: 1.5; list-style-type: square;">
-						<li style="font-size: 24px; font-weight: 100 !important; ">Exploratietool voor studiekeuzes</li>
-						<li style="font-size: 24px; font-weight: 100 !important; margin: 15px 0px;">Gebruik van Unity
-							als game-engine</li>
-						<li style="font-size: 24px; font-weight: 100 !important; margin: 15px 0px;">Communicatie en
-							teamwork</li>
+						<li style="font-size: 24px; font-weight: 100 !important; ">Interactief ontdekken van studierichtingen</li>
+						<li style="font-size: 24px; font-weight: 100 !important; margin: 15px 0px;">Unity</li>
+						<li style="font-size: 24px; font-weight: 100 !important; margin: 15px 0px;">Geen voorkennis</li>
 					</ul>
 				</div>
 				<aside class="notes">
-					Goeie voorbereiding op stage, want mijn stage was ook uitdagend.
+					Overgang: dat we geen voorkennis hadden deed mijn vertrouwen groeien en ook mijn stageproject was iets compleets nieuws. 
 				</aside>
 			</section>
 			<section>
@@ -172,6 +166,9 @@
 						style="background: rgba(35,191,255, 1); width: 20px; height: 20px; border-radius: 20px; margin: 10px; border: solid 2px white">
 					</div>
 				</div>
+				<aside class="notes">
+					Overgang: Stage was het maken van een urban digital twin. Dit was een opdracht van...
+				</aside>
 			</section>
 			<section>
 				<div class="r-hstack">
@@ -183,6 +180,7 @@
 					Projecten:
 					- woningpas
 					- remote sensing: obstakelvrij luchtruim met drones
+					Overgang: hun opdracht was duidelijk...
 				</aside>
 			</section>
 			<section data-markdown data-auto-animate>
@@ -197,7 +195,7 @@
 						Note: 
 						DT = digitale kopie/ modelmatige representatie van de werkelijkheid
 						stadsniveau = evidence-bases beleid
-						Toenemende interesse __> Case Brugge.
+						Toenemende interesse - - -> Case Brugge.
 					</textarea>
 			</section>
 			<section data-markdown data-auto-animate>
@@ -217,8 +215,10 @@
 						Note:
 						OGC = Open Geospatial Consortium  
 						een internationale organisatie die zich bezighoudt met het ontwikkelen en promoten van open standaarden voor georuimtelijke gegevens.
-						DOEL: Geo is GIS-bedrijf dus Integreren GIS en IoT standaard, want digital twins zijn opgebouwd rond IoT standaarden.					
-					</textarea>
+						DOEL: Geo is GIS-bedrijf dus Integreren GIS en IoT standaard, want digital twins zijn opgebouwd rond IoT standaarden.
+						
+						Overgang: Dit leek bij aanvang een hele boterham en na enkele weken mij te verdiepen in de materie bedacht ik mijn usecase.
+				</textarea>
 			</section>
 			<section>
 				<h3>Usecase</h3>
@@ -226,15 +226,26 @@
 				<img class="r-stretch" src="/dist/img/stage_usecase.png">
 				<aside class="notes">
 					Use case uitleggen.
+					Overgang: Ik begrijp dat nog heel abstract klinkt dus ik stel voor dat we meteen gaan kijken naar het eindresulaat.
 				</aside>
 			</section>
 			<section>
 				<section>
 					<h3>Resultaat</h3>
-					<video data-autoplay src="../dist/video/Visualisatie_Presentatie.mp4"></video>
+					<video data-autoplay src="../dist/video/Visualisatie_Presentatie_2.mp4"></video>
+					<aside class="notes">
+						Overgang:
+						Dit was natuurlijk het eindresultaat, en het lijkt misschien heel straight forward, maar als ik jullie
+						even mee mag nemen achter de schermen....
+					</aside>
 				</section>
 				<section>
 					<h3>Achter de schermen</h3>
+					<aside class="notes">
+						Overgang:
+						dan gaan jullie wel zien dat er heel wat achter zit.
+						Centraal in zo'n digital twin staat de... 
+					</aside>
 				</section>
 				<section data-auto-animate data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)">
 					<h4>Twin Graph</h4>
@@ -243,7 +254,7 @@
 					<h4>Twin Graph</h4>
 					<div class="r-stack">
 						<div data-id="box1"
-							style="background: rgba(224,136,0, 1); width: 300px; height: 300px; border-radius: 50px;">
+							style="background: rgba(224,136,0, 1); width: 400px; height: 400px; border-radius: 50px;">
 							Stad</div>
 					</div>
 				</section>
@@ -251,10 +262,10 @@
 					<h4>Twin Graph</h4>
 					<div class="r-stack">
 						<div data-id="box1"
-							style="background: rgba(224,136,0, 1); width: 300px; height: 300px; border-radius: 50px;">
+							style="background: rgba(224,136,0, 1); width: 400px; height: 400px; border-radius: 50px;">
 							Stad</div>
 						<div data-id="box2"
-							style="background: rgba(164,145,0, 1); width: 200px; height: 200px; border-radius: 50px;">
+							style="background: rgba(164,145,0, 1); width: 275px; height: 275px; border-radius: 50px;">
 							District</div>
 					</div>
 				</section>
@@ -262,13 +273,13 @@
 					<h4>Twin Graph</h4>
 					<div class="r-stack">
 						<div data-id="box1"
-							style="background: rgba(224,136,0, 1); width: 300px; height: 300px; border-radius: 50px;">
+							style="background: rgba(224,136,0, 1); width: 400px; height: 400px; border-radius: 50px;">
 							Stad</div>
 						<div data-id="box2"
-							style="background: rgba(164,145,0, 1); width: 200px; height: 200px; border-radius: 50px;">
+							style="background: rgba(164,145,0, 1); width: 275px; height: 275px; border-radius: 50px;">
 							District</div>
 						<div data-id="box3"
-							style="background: rgba(248,131,176, 1); width: 100px; height: 100px; border-radius: 50px; color:black; font-size: large;">
+							style="background: rgba(248,131,176, 1); width: 150px; height: 150px; border-radius: 50px;">
 							Wijk</div>
 					</div>
 				</section>
@@ -289,84 +300,83 @@
 				</section>
 				<section data-background-image="../dist/img/twingraph_2.png">
 				</section>
-				<section data-auto-animate data-transition="convex" data-transition-speed="slow">
+				<section data-transition="convex" data-transition-speed="slow">
 					<h4>Interne werking</h4>
 				</section>
-				<section data-auto-animate data-background-image="../dist/img/architecture_2.png">
+				<section data-transition="fade">
+					<h4 style="margin-bottom: 0px;">Architectuur</h4>
+					<img class="r-stretch" src="../dist/img/architecture_2.png" alt="Architecture image" style="margin-top: 0px;">
 					<aside class="notes">
 						Event Grid = serverloze event backplane, gebruikt publish-subscribe model. publishers zenden
 						data, subscribers, hier de functie, bepaald welke events afgehandeld worden
 						Event Hub = big data streamingplatform. Kan miljoenen events per seconde afhandelen. Faciliteert
 						het opvangen, behouden
 
-						Overgang = ... en met deze opzet kan dan de hele digital twin gevisualiseerd worden zoals
-						getoond in het filmpje.
-						En met het einde van het stageproject komt ook stilaan een einde aan het traject van 4 jaar...
+						Overgang = Ik hoop dat ik jullie hiermee eem blik achter de schermen heb kunnen geven van mijn stageproject.
+					</aside>
+				</section>
+				<section data-transition="zoom">
+					<h4 style="margin: 0px">Stageproject: Urban digital twin </h4>
+					<img src="../dist/img/stage_header.png" class="r-stretch" style="margin-bottom: 0px">
+					<div class="r-hstack justify-center">
+						<div data-id="box1"
+							style="background: rgba(255,255,34, 1); width: 20px; height: 20px; border-radius: 20px; margin: 10px; border: solid 2px white">
+						</div>
+						<div data-id="box2"
+							style="background: rgba(42,255,42, 1);; width: 20px; height: 20px; border-radius: 20px; margin: 10px; border: solid 2px white">
+						</div>
+						<div data-id="box3"
+							style="background: rgba(35,191,255, 1); width: 20px; height: 20px; border-radius: 20px; margin: 10px; border: solid 2px white">
+						</div>
+					</div>
+					<aside class="notes">
+						Overgang = en ik hoop dat met het voorstellen van al deze Projecten
+						jullie ook een inkijk heb kunnen geven in het traject dat ik de afgelopen 4 jaar heb afgelegd
+						Als ik het voor mijzelf evalueer en even terugkijk dan naar mijn eigen doelstellingen: 
 					</aside>
 				</section>
 			</section>
-			<section data-background-image="../dist/img/reflectie.JPG" data-transition="fade">
-				<h3 class="no-blur" style="text-shadow: 3px 3px 2px rgba(51, 51, 51, 0.5);">Reflectie</h3>
-				<aside class="notes">
-					en bij het maken van mijn portfolio en deze presentatie besefte ik hoever ik al gekomen ben
-				</aside>
-			</section>
-			<section data-background-image="../dist/img/Projectflow.png" data-visibility="hidden">
-				<aside class="notes">
-					Als ik ik terugkijk op de afgelopen 4 jaar dan kan ik comcluderen dat deze projectflow nog altijd
-					van toepassing is
-					op hoe ik projecten het liefst aanpak en dat ik de afgelopen jaren sterker ben geworden op die
-					ontwikkeling.
-				</aside>
-			</section>
 			<section data-auto-animate>
 				<h3>Persoonlijke doelstellingen</h3>
 				<ul style="line-height: 1.5;">
 					<li style="list-style: none;line-height: 1,5;"><span style="color: #1f4986;"><i data-id="check1"
-								class="fa-solid fa-graduation-cap" style="margin-right: 15px;"></i></span></i>Diploma
-						halen</li>
+								class="fa-solid fa-graduation-cap" style="margin-right: 15px;"></i></span></i>Diploma behalen</li>
 					<li style="list-style: none; line-height: 1.5;"><span style="color: #1f4986;"><i data-id="check2"
-								class="fa-solid fa-code" style="margin-right: 15px;"></i></span>Leren programmeren</li>
+								class="fa-solid fa-code" style="margin-right: 15px;"></i></span>Technische skills ontwikkelen</li>
 				</ul>
 				<aside class="notes">
-					mij afvraag waarom ik hier weer mee begonnen was denk ik dat ik dit me wel een goede basis heeft
-					gegeven om op verder te bouwen.
+					Overgang: 
 				</aside>
 			</section>
 			<section data-auto-animate>
 				<h3>Persoonlijke doelstellingen</h3>
 				<ul style="line-height: 1.5;">
 					<li style="list-style: none;line-height: 1,5;"><span style="color: #1f4986;"><i data-id="check1"
-								class="fa-solid fa-graduation-cap" style="margin-right: 15px;"></i></span></i>Diploma
-						halen</li>
+								class="fa-solid fa-graduation-cap" style="margin-right: 15px;"></i></span></i>Diploma behalen
+					</li>
 					<li style="list-style: none; line-height: 1.5;"><span style="color: #63D471;"><i data-id="check2"
-								class="fa-solid fa-check" style="margin-right: 15px;"></i></span>Leren programmeren</li>
+								class="fa-solid fa-check" style="margin-right: 15px;"></i></span>Technische skills ontwikkelen
+					</li>
 				</ul>
 				<aside class="notes">
-					En dat ik deze doelstelling wel kan afvinken.
-					Maar naast de technische kennis besef ik nu ook nu doorzetten en teamwork heel belangrijk is.
-					Blijft enkel dat diploma over.
+					Overgang:
 				</aside>
 			</section>
 			<section data-auto-animate>
 				<h3>Persoonlijke doelstellingen</h3>
 				<ul style="line-height: 1.5;">
 					<li style="list-style: none;line-height: 1,5;"><span style="color: #C47335;"><i data-id="check1"
-								class="fa-solid fa-clock" style="margin-right: 15px;"></i></span></i>Diploma halen</li>
+								class="fa-solid fa-clock" style="margin-right: 15px;"></i></span></i>Diploma behalen</li>
 					<li style="list-style: none; line-height: 1.5;"><span style="color: #63D471;"><i data-id="check2"
-								class="fa-solid fa-check" style="margin-right: 15px;"></i></span>Leren programmeren</li>
+								class="fa-solid fa-check" style="margin-right: 15px;"></i></span>Technische skills ontwikkelen</li>
 				</ul>
 				<aside class="notes">
-					Ik hoop dat dit enkel nog maar een kwestie van tijd is...
-					Bedankt voor jullie aandacht, ik hoop dat ik met deze presentatie een inkijk heb kunnen geven in het
-					traject van de afgelopen 4 jaar en dat dit ook zo interessant was voor jullie als voor mij en
+					Overgang:
+					Bedankt voor jullie aandacht en als er vragen zijn dan beantwoord ik deze graag.
 				</aside>
 			</section>
 			<section data-background-image="../dist/img/personal2_blur.png">
 				<h3 class="no-blur" style="text-shadow: 3px 3px 2px rgba(51, 51, 51, 0.5);">Vragen?</h3>
-				<aside class="notes">
-					als er nog vragen zijn dan beantwoord ik deze graag.
-				</aside>
 			</section>
 		</div>
 	</div>
