--- a/index.html
+++ b/index.html
@@ -75,12 +75,14 @@
 			<section>
 				<h3>Persoonlijke doelstellingen</h3>
 				<ul>
+					<li class="fragment fade-up" style="list-style: none; line-height: 1.5;"><span
+						style="color: #1f4986;"><i class="fa-solid fa-code"
+							style="margin-right: 15px;"></i></span>Technische skills ontwikkelen
+					</li>
 					<li class="fragment fade-up" style="list-style: none;line-height: 1,5;"><span
 							style="color: #1f4986;"><i class="fa-solid fa-graduation-cap"
-								style="margin-right: 15px;"></i></span></i>Diploma behalen</li>
-					<li class="fragment fade-up" style="list-style: none; line-height: 1.5;"><span
-							style="color: #1f4986;"><i class="fa-solid fa-code"
-								style="margin-right: 15px;"></i></span>Technische skills ontwikkelen</li>
+								style="margin-right: 15px;"></i></span></i>Diploma behalen
+					</li>
 				</ul>
 				<aside class="notes">
 					Overgang:
@@ -338,10 +340,10 @@
 			<section data-auto-animate>
 				<h3>Persoonlijke doelstellingen</h3>
 				<ul style="line-height: 1.5;">
+					<li style="list-style: none; line-height: 1.5;"><span style="color: #1f4986;"><i data-id="check2"
+						class="fa-solid fa-code" style="margin-right: 15px;"></i></span>Technische skills ontwikkelen</li>
 					<li style="list-style: none;line-height: 1,5;"><span style="color: #1f4986;"><i data-id="check1"
 								class="fa-solid fa-graduation-cap" style="margin-right: 15px;"></i></span></i>Diploma behalen</li>
-					<li style="list-style: none; line-height: 1.5;"><span style="color: #1f4986;"><i data-id="check2"
-								class="fa-solid fa-code" style="margin-right: 15px;"></i></span>Technische skills ontwikkelen</li>
 				</ul>
 				<aside class="notes">
 					Overgang: 
@@ -350,11 +352,11 @@
 			<section data-auto-animate>
 				<h3>Persoonlijke doelstellingen</h3>
 				<ul style="line-height: 1.5;">
+					<li style="list-style: none; line-height: 1.5;"><span style="color: #63D471;"><i data-id="check2"
+						class="fa-solid fa-check" style="margin-right: 15px;"></i></span>Technische skills ontwikkelen
+					</li>
 					<li style="list-style: none;line-height: 1,5;"><span style="color: #1f4986;"><i data-id="check1"
 								class="fa-solid fa-graduation-cap" style="margin-right: 15px;"></i></span></i>Diploma behalen
-					</li>
-					<li style="list-style: none; line-height: 1.5;"><span style="color: #63D471;"><i data-id="check2"
-								class="fa-solid fa-check" style="margin-right: 15px;"></i></span>Technische skills ontwikkelen
 					</li>
 				</ul>
 				<aside class="notes">
@@ -364,10 +366,10 @@
 			<section data-auto-animate>
 				<h3>Persoonlijke doelstellingen</h3>
 				<ul style="line-height: 1.5;">
+					<li style="list-style: none; line-height: 1.5;"><span style="color: #63D471;"><i data-id="check2"
+						class="fa-solid fa-check" style="margin-right: 15px;"></i></span>Technische skills ontwikkelen</li>
 					<li style="list-style: none;line-height: 1,5;"><span style="color: #C47335;"><i data-id="check1"
 								class="fa-solid fa-clock" style="margin-right: 15px;"></i></span></i>Diploma behalen</li>
-					<li style="list-style: none; line-height: 1.5;"><span style="color: #63D471;"><i data-id="check2"
-								class="fa-solid fa-check" style="margin-right: 15px;"></i></span>Technische skills ontwikkelen</li>
 				</ul>
 				<aside class="notes">
 					Overgang:
